feat: update jda and add support for DAVE Protocal