@@ -1,11 +1,9 @@
-FROM alpine:3.16
-RUN apk add --no-cache openjdk11
+FROM eclipse-temurin:25-jre-jammy
 COPY target/MusicMonke-1.3.2.jar /usr/app/
 WORKDIR /usr/app
 EXPOSE 8080
 
-# Use build argument for the token
 ARG TOKEN
 ENV TOKEN=$TOKEN
 
-ENTRYPOINT ["java", "-jar", "MusicMonke-1.3.2.jar"]
+ENTRYPOINT ["java", "--enable-native-access=ALL-UNNAMED", "-jar", "MusicMonke-1.3.2.jar"]
